--- a/index.html
+++ b/index.html
@@ -62,6 +62,24 @@
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <!-- Custom CSS -->
+  <style>
+    .custom-popup .leaflet-popup-close-button {
+      display: none !important;
+    }
+    .custom-popup .leaflet-popup-content-wrapper, .custom-popup .leaflet-popup-tip {
+      background: transparent !important;
+      box-shadow: none !important;
+    }
+    .custom-popup .leaflet-popup-content-wrapper {
+      text-align: center !important;
+      padding: 0 !important;
+    }
+    .custom-popup .leaflet-popup-content {
+      font-size: 15px;
+      font-weight: 500;
+    }
+  </style>
 </head>
 
 <body>
